# erlang

./: .pre-commit-config.yaml  README.md  codespell.conf  main.py  pyproject.toml
.github/workflows/: spelling.yml
erlang/: __init__.py
scripts/: format_code.py
