[tool.poetry]
name = "erlang"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pyautogui = "^0.9.54"
mypy = "^1.13.0"
pytest = "^8.3.3"

[tool.poetry.scripts]
start = "main:main"
test = "pytest:main"
type-check = "mypy:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
