[tool.poetry]
name = "erlang"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pyautogui = "^0.9.54"
mypy = "^1.13.0"
pytest = "^8.3.3"
ruff = "^0.7.3"
codespell = "^2.3.0"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.30.0"
ruff = "^0.7.3"
pre-commit = "^4.0.1"

[tool.poetry.scripts]
start = "main:main"
test = "pytest:main"
type-check = "mypy:main"
format = "scripts.format_code:format_code"
lint = "scripts.format_code:lint_code"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project
'''

[tool.isort]
profile = "black"  # 使其与 black 兼容
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.ruff]
# 基础配置
line-length = 88
indent-width = 4
target-version = "py38"

# 选择启用的规则
select = [
    "E",   # pycodestyle 错误
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "D",   # pydocstyle
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "W",   # pycodestyle warnings
]

# 忽略的规则
ignore = []

# 排除的文件和目录
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
]

# 文档字符串配置
[tool.ruff.pydocstyle]
convention = "google"

# 每个文件特定的规则
[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "D103"]

# 格式化配置
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
